css/style.css
/* ... */
  .ftco-about .counter-wrap .text p span {
    font-weight: 400;
    color: #fff; }
  .ftco-about .counter-wrap .text p span.number {
    font-weight: 600;
    color: #ffbd39; }

.resume-wrap {
  width: 100%;
  margin-bottom: 30px;
  background: rgba(255, 255, 255, 0.1);
  padding: 30px;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  -ms-border-radius: 5px;
  border-radius: 5px; }
  .resume-wrap .date {
    font-weight: 900;
    font-size: 26px;
    color: #ffbd39; }
  .resume-wrap h2 {
    font-size: 26px; }
  .resume-wrap .position {
    font-size: 12px;
    font-weight: 600;
    letter-spacing: 3px;
    text-transform: uppercase; }

.services-1 {
  margin-bottom: 40px;
  padding: 2em;
  background: rgba(255, 255, 255, 0.1);
  width: 100%;
  -webkit-box-shadow: 0px 20px 69px -27px rgba(0, 0, 0, 0.17);
  -moz-box-shadow: 0px 20px 69px -27px rgba(0, 0, 0, 0.17);
  box-shadow: 0px 20px 69px -27px rgba(0, 0, 0, 0.17); }
  .services-1 .icon {
    display: block;
    margin-bottom: 30px; }
    .services-1 .icon i {
      font-size: 60px;
      line-height: 1.0;
      color: #ffbd39; }
  .services-1 .desc h3 {
    line-height: 1.3;
    font-size: 13px;
    font-weight: 500;
    letter-spacing: 3px;
    text-transform: uppercase;
    position: relative;
    color: #fff; }
    .services-1 .desc h3:after {
      position: absolute;
      bottom: -15px;
      left: 0;
      right: 0;
      content: '';
      width: 30px;
      height: 1px;
      background: #ffbd39;
      margin: 0 auto; }
    .services-1 .desc h3 a {
      color: #fff; }
  .services-1 .desc h4 {
    font-size: 20px;
    font-weight: 300;
    margin-bottom: 18px; }
  .services-1 .desc span {
    display: block;
    text-transform: uppercase;
    font-size: 12px;
    margin-bottom: 10px;
    color: #ffbd39; }
  .services-1:hover {
    background: #ffbd39; }
    .services-1:hover .icon i {
      color: #fff; }
    .services-1:hover h3 {
      color: #000000; }
      .services-1:hover h3:after {
        background: #000000; }

.progress-wrap {
  width: 100%;
  margin-bottom: 30px; }
  .progress-wrap h3 {
    font-size: 20px;
    margin-bottom: 10px;
    font-weight: 500; }

.progress {
  height: 10px;
  -webkit-box-shadow: none;
  box-shadow: none;
  background: #1a1a1a;
  overflow: visible; }

.progress-bar {
  background: #ffbd39;
  -webkit-box-shadow: none;
  box-shadow: none;
  font-size: 12px;
  line-height: 1.2;
  color: #000000;
  font-weight: 600;
  position: relative;
  overflow: visible;
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  -ms-border-radius: 2px;
  border-radius: 2px; }
  .progress-bar:after {
    position: absolute;
    top: -2px;
    right: 0;
    width: 34px;
    height: 34px;
    content: '';
    background: #ffbd39;
    -webkit-border-radius: 2px;
    -moz-border-radius: 2px;
    -ms-border-radius: 2px;
    border-radius: 2px;
    opacity: 0; }
  .progress-bar span {
    position: absolute;
    top: -38px;
    right: 0;
    font-size: 20px;
    font-weight: 400;
    color: #fff; }

.ftco-hireme {
  background: #ffbd39;
  z-index: -1; }
  .ftco-hireme h2 {
    color: #fff;
    font-size: 40px;
    font-weight: 900; }
    .ftco-hireme h2 span {
      color: #ffbd39; }

@media (min-width: 992px) {
  .margin-top {
    margin-top: -70px;
    padding-top: 10em !important; } }

.project {
  width: 100%;
  height: 285px;
  margin-bottom: 30px;
  position: relative;
  z-index: 0; 
  border: 10px groove #dbdbdb;
  border-radius: 5px;
}

  .project.img-2 {
    height: 600px; 
  }
    @media (max-width: 767.98px) {
      .project.img-2 {
        height: 285px; } }
    .project.img-2 .text {
      max-width: 45%;
      z-index: 1; }
      .project.img-2 .text h3 {
        font-size: 22px; }
        .project.img-2 .text h3 a {
          color: #fff; }
      .project.img-2 .text span {
        color: rgba(255, 255, 255, 0.8);
        text-transform: uppercase;
        letter-spacing: 2px; }
      @media (max-width: 767.98px) {
        .project.img-2 .text {
          max-width: 100%;
          opacity: 1; }
          .project.img-2 .text span {
            color: rgba(255, 255, 255, 0.8); } }
  .project .overlay {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    content: '';
    opacity: 0;
    background: #000;
    z-index: -1;
    -moz-transition: all 0.3s ease;
    -o-transition: all 0.3s ease;
    -webkit-transition: all 0.3s ease;
    -ms-transition: all 0.3s ease;
    transition: all 0.3s ease; }
    @media (max-width: 767.98px) {
      .project .overlay {
        opacity: .2; } }
  .project .text {
    max-width: 80%;
    z-index: 1;
    opacity: 0;
    -moz-transition: all 0.3s ease;
    -o-transition: all 0.3s ease;
    -webkit-transition: all 0.3s ease;
    -ms-transition: all 0.3s ease;
    transition: all 0.3s ease; }
    .project .text h3 {
      font-size: 20px; }
      .project .text h3 a {
        color: #fff; }
    .project .text span {
      color: rgba(255, 255, 255, 0.8);
      text-transform: uppercase;
      letter-spacing: 2px;
      font-size: 12px;
      font-weight: 600; }
    @media (max-width: 767.98px) {
      .project .text {
        opacity: 1; }
        .project .text span {
          color: rgba(255, 255, 255, 0.8); } }
  .project:hover .overlay, .project:focus .overlay {
    opacity: .9; }
  .project:hover .text, .project:focus .text {
    opacity: 1; }

.aside-stretch {
  background: #ffce6c; }
  .aside-stretch:after {
    position: absolute;
    top: 0;
    right: 100%;
    bottom: 0;
    content: '';
    width: 360%;
    background: #ffce6c; }
  @media (max-width: 767.98px) {
    .aside-stretch {
      background: transparent; }
      .aside-stretch:after {
        background: transparent;
        display: none; } }

.form-control {
  height: 52px !important;
  background: #fff !important;
  color: #000000 !important;
  font-size: 18px;
  border-radius: 5px;
  -webkit-box-shadow: none !important;
  box-shadow: none !important; }
/* ... */

